--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -270,7 +270,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="30dp"
             android:layout_marginTop="6dp"
-            android:layout_toRightOf="@id/wallet"
+            android:layout_toEndOf="@id/wallet"
             android:text="My Wallet"
             android:textColor="#000"
             android:textSize="14sp"
@@ -329,7 +329,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="30dp"
             android:layout_marginTop="6dp"
-            android:layout_toRightOf="@id/account"
+            android:layout_toEndOf="@id/account"
             android:text="My Bank Accounts"
             android:textColor="#000"
             android:textSize="14sp"
@@ -366,7 +366,7 @@
             android:id="@+id/editProfLayout"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
             android:layout_weight="1"
             android:orientation="vertical"
             android:paddingBottom="2dp"
