--- a/app/src/main/res/layout/for_recharge_transactions_list.xml
+++ b/app/src/main/res/layout/for_recharge_transactions_list.xml
@@ -16,24 +16,34 @@
         android:layout_height="wrap_content"
         android:background="@color/cardBG"
         android:padding="10dp">
-
+       <TextView
+           android:layout_width="wrap_content"
+           android:layout_height="wrap_content"
+           android:id="@+id/trans_id1"
+           android:layout_below="@id/mobile_number"
+           android:textColor="@color/darkGray"
+           android:textSize="16sp"
+           android:textStyle="bold"
+           android:text="Transaction Id :"/>
         <TextView
             android:id="@+id/trans_id"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Transaction id"
+            android:layout_marginStart="3dp"
+            android:layout_toEndOf="@id/trans_id1"
             android:textColor="@color/textColor"
+            android:layout_below="@id/li_amount"
             android:textSize="16sp"
-            android:textStyle="bold" />
+             />
 
         <TextView
             android:id="@+id/date_time"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/mobile_number"
+            android:layout_below="@id/trans_id"
             android:layout_marginTop="0dp"
             android:text="Date and Time" />
-
         <LinearLayout
             android:id="@+id/li_amount"
             android:layout_width="wrap_content"
@@ -58,37 +68,22 @@
                 android:textSize="16sp"
                 android:textStyle="bold" />
         </LinearLayout>
-
          <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:id="@+id/mobile_number"
-             android:layout_below="@id/trans_id"
+             android:textColor="@color/textColor"
+             android:textSize="16sp"
              android:text="Mobile number"/>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/service"
-            android:layout_below="@id/trans_id"
-            android:layout_marginStart="15dp"
-            android:textColor="@color/textColor"
-            android:textSize="16sp"
-            android:layout_toRightOf="@id/mobile_number"
-            android:text="Mobile"/>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/orderId"
-            android:layout_below="@id/date_time"
-            android:layout_marginStart="15dp"
-            android:text="orderId"/>
+
+
 
 
         <TextView
             android:id="@+id/status"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/date_time"
+            android:layout_below="@id/trans_id"
             android:layout_alignParentEnd="true"
             android:layout_marginTop="5dp"
             android:layout_marginEnd="15dp"
@@ -96,8 +91,5 @@
             android:textColor="@color/textColor"
             android:textSize="16sp"
             android:textStyle="bold" />
-
     </RelativeLayout>
-
-
 </androidx.cardview.widget.CardView>
