--- a/app/src/main/res/layout/activity_add_wallet_amount.xml
+++ b/app/src/main/res/layout/activity_add_wallet_amount.xml
@@ -30,6 +30,7 @@
             android:text="Add wallet amount"
             android:textColor="#fff"
             android:textSize="18sp"
+            android:fontFamily="@font/righteous_regular"
             android:textStyle="bold" />
     </RelativeLayout>
 
