--- a/app/src/main/res/layout/activity_recharge_history.xml
+++ b/app/src/main/res/layout/activity_recharge_history.xml
@@ -27,6 +27,7 @@
             android:layout_centerVertical="true"
             android:layout_marginTop="25dp"
             android:text="Recharges History"
+            android:fontFamily="@font/modest_regular"
             android:textColor="#fff"
             android:textSize="18sp"
             android:textStyle="bold" />
