--- a/app/src/main/res/layout-v26/activity_terms_conditions.xml
+++ b/app/src/main/res/layout-v26/activity_terms_conditions.xml
@@ -29,6 +29,7 @@
             android:layout_centerVertical="true"
             android:layout_marginTop="25dp"
             android:text="Terms and Conditions"
+            android:fontFamily="@font/modest_regular"
             android:textColor="#fff"
             android:textSize="18sp"
             android:textStyle="bold" />
