--- a/app/src/main/res/layout-v28/activity_bus.xml
+++ b/app/src/main/res/layout-v28/activity_bus.xml
@@ -28,7 +28,7 @@
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
             android:layout_marginTop="25dp"
-            android:fontFamily="@font/modest_regular"
+            android:fontFamily="@font/righteous_regular"
             android:textFontWeight="800"
             android:text="Bus Ticket Booking"
             android:textColor="#fff"
