--- a/app/src/main/res/layout/activity_available_buses.xml
+++ b/app/src/main/res/layout/activity_available_buses.xml
@@ -55,6 +55,7 @@
             android:layout_centerVertical="true"
             android:layout_marginTop="25dp"
             android:text="Available Buses"
+            android:fontFamily="@font/righteous_regular"
             android:textColor="#fff"
             android:textSize="18sp"
             android:textStyle="bold" />
