--- a/app/src/main/res/layout/activity_bus_seating.xml
+++ b/app/src/main/res/layout/activity_bus_seating.xml
@@ -57,6 +57,7 @@
             android:layout_centerVertical="true"
             android:layout_marginTop="25dp"
             android:text="Bus Seating"
+            android:fontFamily="@font/righteous_regular"
             android:textColor="#fff"
             android:textSize="18sp"
             android:textStyle="bold" />
