--- a/app/src/main/res/layout/activity_contact_us.xml
+++ b/app/src/main/res/layout/activity_contact_us.xml
@@ -29,6 +29,7 @@
             android:layout_centerVertical="true"
             android:layout_marginTop="25dp"
             android:text="Contact Us"
+            android:fontFamily="@font/modest_regular"
             android:textColor="#fff"
             android:textSize="18sp"
             android:textStyle="bold" />
@@ -53,8 +54,9 @@
                 android:layout_marginTop="20dp"
                 android:layout_marginStart="15dp"
                 android:layout_marginEnd="15dp"
-                android:layout_marginBottom="15dp"
-                app:cardElevation="15dp">
+                android:layout_marginBottom="35dp"
+                app:cardElevation="15dp"
+                app:cardCornerRadius="5dp">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -72,12 +74,14 @@
                         android:text="@string/contact1"
                         android:textSize="16sp"
                         android:textStyle="bold"
+                        android:fontFamily="@font/modest_regular"
                         android:layout_gravity="start"
                         android:paddingTop="15dp"/>
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:fontFamily="@font/domine"
                         android:text="@string/contact2" />
 
                     <LinearLayout
