--- a/app/src/main/res/layout/activity_dth_screen.xml
+++ b/app/src/main/res/layout/activity_dth_screen.xml
@@ -29,6 +29,7 @@
             android:layout_centerVertical="true"
             android:layout_marginTop="25dp"
             android:text="DTH Recharge"
+            android:fontFamily="@font/righteous_regular"
             android:textColor="#fff"
             android:textSize="18sp"
             android:textStyle="bold" />
@@ -43,7 +44,7 @@
         android:layout_marginStart="15dp"
         android:layout_marginTop="10dp"
         android:layout_marginEnd="15dp"
-        android:hint="enter DTH number"
+        android:hint="Enter DTH number"
         app:boxStrokeColor="@color/gradientStart">
 
         <com.google.android.material.textfield.TextInputEditText
