--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -77,6 +77,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Edit Profile"
+                    android:fontFamily="@font/righteous_regular"
                     android:textColor="@color/black"
                     android:textSize="18sp"
                     android:textStyle="bold" />
