--- a/app/src/main/res/layout/activity_electricity_screen.xml
+++ b/app/src/main/res/layout/activity_electricity_screen.xml
@@ -30,6 +30,7 @@
             android:layout_marginTop="25dp"
             android:text="Electricity Bill "
             android:textColor="#fff"
+            android:fontFamily="@font/righteous_regular"
             android:textSize="18sp"
             android:textStyle="bold" />
     </RelativeLayout>
