--- a/app/src/main/res/layout/activity_gas_booking_successfull.xml
+++ b/app/src/main/res/layout/activity_gas_booking_successfull.xml
@@ -28,6 +28,7 @@
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
             android:layout_marginTop="25dp"
+            android:fontFamily="@font/righteous_regular"
             android:text="Status"
             android:textColor="#fff"
             android:textSize="18sp"
