--- a/app/src/main/res/layout/activity_mobile.xml
+++ b/app/src/main/res/layout/activity_mobile.xml
@@ -43,6 +43,7 @@
             android:layout_centerVertical="true"
             android:layout_marginTop="25dp"
             android:text="Mobile Recharge"
+            android:fontFamily="@font/righteous_regular"
             android:textColor="#fff"
             android:textSize="18sp"
             android:textStyle="bold" />
@@ -57,7 +58,7 @@
         android:layout_marginStart="15dp"
         android:layout_marginTop="10dp"
         android:layout_marginEnd="15dp"
-        android:hint="enter mobile number"
+        android:hint="Enter mobile number"
         app:boxStrokeColor="@color/gradientStart">
 
         <com.google.android.material.textfield.TextInputEditText
