--- a/app/src/main/res/layout/activity_mobile_recharge_successfull.xml
+++ b/app/src/main/res/layout/activity_mobile_recharge_successfull.xml
@@ -28,6 +28,7 @@
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
             android:layout_marginTop="25dp"
+            android:fontFamily="@font/righteous_regular"
             android:text="Status"
             android:textColor="#fff"
             android:textSize="18sp"
@@ -92,94 +93,173 @@
         android:textSize="16sp"
         android:textStyle="bold" />
 
-    <RelativeLayout
-        android:id="@+id/tran_details"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/success">
+   <androidx.cardview.widget.CardView
+       android:layout_width="match_parent"
+       android:layout_height="wrap_content"
+       app:cardCornerRadius="8dp"
+       app:cardElevation="15dp"
+
+       android:layout_margin="10dp"
+       android:layout_below="@id/success"
+       >
+       <LinearLayout
+           android:id="@+id/tran_details"
+           android:layout_width="match_parent"
+           android:layout_height="wrap_content"
+           android:padding="8dp"
+           android:orientation="vertical">
+
+           <LinearLayout
+               android:layout_width="match_parent"
+               android:layout_height="wrap_content"
+               android:orientation="horizontal">
+
+               <TextView
+                   android:id="@+id/transaction_id"
+                   android:layout_width="0dp"
+                   android:layout_height="wrap_content"
+                   android:layout_marginStart="15dp"
+                   android:layout_weight="2"
+                   android:gravity="start"
+                   android:text="TransactionId"
+                   android:textSize="16sp"
+                   android:textStyle="bold" />
+
+               <TextView
+                   android:layout_width="0dp"
+                   android:layout_height="wrap_content"
+                   android:layout_weight="1"
+                   android:gravity="center"
+                   android:text="--"
+                   android:textSize="20sp"
+                   android:textStyle="bold" />
+
+               <TextView
+                   android:id="@+id/transaction_id1"
+                   android:layout_width="0dp"
+                   android:layout_height="wrap_content"
+                   android:layout_weight="2"
+                   android:gravity="start"
+                   android:layout_marginStart="15dp"
+                   android:text="123456"
+                   android:textColor="#2196F3" />
+           </LinearLayout>
+
+           <LinearLayout
+               android:layout_width="match_parent"
+               android:layout_height="wrap_content"
+               android:orientation="horizontal">
+
+               <TextView
+                   android:id="@+id/number"
+                   android:layout_width="0dp"
+                   android:layout_height="wrap_content"
+                   android:layout_marginStart="15dp"
+                   android:layout_weight="2"
+                   android:gravity="start"
+                   android:text="Number"
+                   android:textSize="16sp"
+                   android:textStyle="bold" />
 
 
-        <TextView
-            android:id="@+id/transaction_id"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="15dp"
-            android:layout_marginTop="20dp"
-            android:text="TransactionId"
-            android:textSize="16sp"
-            android:textStyle="bold" />
+               <TextView
+                   android:layout_width="0dp"
+                   android:layout_height="wrap_content"
+                   android:layout_weight="1"
+                   android:gravity="center"
+                   android:text="--"
+                   android:textSize="20sp"
+                   android:textStyle="bold" />
 
-        <TextView
-            android:id="@+id/transaction_id1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/transaction_id"
-            android:layout_marginStart="15dp"
-            android:layout_marginTop="4dp"
-            android:text="123456"
-            android:textColor="#2196F3" />
+               <TextView
+                   android:id="@+id/number1"
+                   android:layout_width="0dp"
+                   android:layout_height="wrap_content"
+                   android:layout_weight="2"
+                   android:gravity="start"
+                   android:layout_marginStart="15dp"
+                   android:text="123456"
+                   android:textColor="#2196F3" />
+           </LinearLayout>
 
-        <TextView
-            android:id="@+id/number"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/transaction_id1"
-            android:layout_marginStart="15dp"
-            android:layout_marginTop="20dp"
-            android:text="Number"
-            android:textSize="16sp"
-            android:textStyle="bold" />
+           <LinearLayout
+               android:layout_width="match_parent"
+               android:layout_height="wrap_content"
+               android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/number1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/number"
-            android:layout_marginStart="15dp"
-            android:layout_marginTop="4dp"
-            android:text="123456"
-            android:textColor="#2196F3" />
+               <TextView
+                   android:id="@+id/amount"
+                   android:layout_width="0dp"
+                   android:layout_height="wrap_content"
+                   android:layout_marginStart="15dp"
+                   android:layout_weight="2"
+                   android:gravity="start"
 
-        <TextView
-            android:id="@+id/amount"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/number1"
-            android:layout_marginStart="15dp"
-            android:layout_marginTop="20dp"
-            android:text="Amount"
-            android:textSize="16sp"
-            android:textStyle="bold" />
+                   android:text="Amount"
+                   android:textSize="16sp"
+                   android:textStyle="bold" />
 
-        <TextView
-            android:id="@+id/amount1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/amount"
-            android:layout_marginStart="15dp"
-            android:layout_marginTop="4dp"
-            android:text="123456"
-            android:textColor="#2196F3" />
 
-        <TextView
-            android:id="@+id/order"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/amount1"
-            android:layout_marginStart="15dp"
-            android:layout_marginTop="20dp"
-            android:text="Order"
-            android:textSize="16sp"
-            android:textStyle="bold" />
+               <TextView
+                   android:layout_width="0dp"
+                   android:layout_height="wrap_content"
+                   android:layout_weight="1"
+                   android:gravity="center"
+                   android:text="--"
+                   android:textSize="20sp"
+                   android:textStyle="bold" />
 
-        <TextView
-            android:id="@+id/order1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/order"
-            android:layout_marginStart="15dp"
-            android:layout_marginTop="4dp"
-            android:text="123456"
-            android:textColor="#2196F3" />
-    </RelativeLayout>
+
+               <TextView
+                   android:id="@+id/amount1"
+                   android:layout_width="0dp"
+                   android:layout_height="wrap_content"
+                   android:layout_weight="2"
+                   android:gravity="start"
+                   android:layout_marginStart="15dp"
+                   android:text="123456"
+                   android:textColor="#2196F3" />
+           </LinearLayout>
+
+           <LinearLayout
+               android:layout_width="match_parent"
+               android:layout_height="wrap_content"
+               android:orientation="horizontal">
+
+               <TextView
+                   android:id="@+id/order"
+                   android:layout_width="0dp"
+                   android:layout_height="wrap_content"
+                   android:layout_marginStart="15dp"
+                   android:layout_weight="2"
+                   android:gravity="start"
+                   android:text="Order"
+                   android:textSize="16sp"
+                   android:textStyle="bold" />
+
+
+               <TextView
+                   android:layout_width="0dp"
+                   android:layout_height="wrap_content"
+                   android:layout_weight="1"
+                   android:gravity="center"
+                   android:text="--"
+                   android:textSize="20sp"
+                   android:textStyle="bold" />
+
+
+               <TextView
+                   android:id="@+id/order1"
+                   android:layout_width="0dp"
+                   android:layout_height="wrap_content"
+                   android:layout_weight="2"
+                   android:gravity="start"
+                   android:layout_marginStart="15dp"
+                   android:text="123456"
+                   android:textColor="#2196F3" />
+           </LinearLayout>
+
+
+       </LinearLayout>
+   </androidx.cardview.widget.CardView>
 </RelativeLayout>
