--- a/app/src/main/res/layout/activity_my_wallet.xml
+++ b/app/src/main/res/layout/activity_my_wallet.xml
@@ -28,6 +28,7 @@
             android:layout_centerVertical="true"
             android:layout_marginTop="25dp"
             android:text="My Wallet"
+            android:fontFamily="@font/righteous_regular"
             android:textColor="#fff"
             android:textSize="18sp"
             android:textStyle="bold" />
@@ -161,8 +162,9 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@id/total"
                 android:layout_marginStart="15dp"
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="25dp"
                 android:text="Reward Points"
+                android:textColor="#DCFF5722"
                 android:textSize="16sp"
                 android:textStyle="bold" />
 
@@ -171,7 +173,7 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@id/li2_amount"
                 android:layout_alignParentEnd="true"
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="25dp"
                 android:layout_marginEnd="10dp"
                 android:orientation="horizontal">
 
@@ -182,7 +184,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="..."
-                    android:textColor="#0071cc"
+                    android:textColor="#DCFF5722"
                     android:textSize="16sp"
                     android:textStyle="bold" />
 
