--- a/app/src/main/res/layout/activity_payment_start.xml
+++ b/app/src/main/res/layout/activity_payment_start.xml
@@ -29,6 +29,7 @@
             android:layout_centerVertical="true"
             android:layout_marginTop="25dp"
             android:text="Status"
+            android:fontFamily="@font/righteous_regular"
             android:textColor="#fff"
             android:textSize="18sp"
             android:textStyle="bold" />
