--- a/app/src/main/res/layout/activity_privacy_policy.xml
+++ b/app/src/main/res/layout/activity_privacy_policy.xml
@@ -29,6 +29,7 @@
             android:layout_centerVertical="true"
             android:layout_marginTop="25dp"
             android:text="Privacy Policy"
+            android:fontFamily="@font/modest_regular"
             android:textColor="#fff"
             android:textSize="18sp"
             android:textStyle="bold" />
@@ -114,12 +115,7 @@
                     android:text="@string/pol6"
                     android:justificationMode="inter_word"/>
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="8dp"
-                    android:text="@string/pol6"
-                    android:justificationMode="inter_word"/>
+
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -148,7 +144,19 @@
                     android:layout_marginBottom="8dp"
                     android:text="@string/pol10"
                     android:justificationMode="inter_word"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="8dp"
+                    android:text="@string/pol001"
+                    android:justificationMode="inter_word"/>
 
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="8dp"
+                    android:text="@string/pol002"
+                    android:justificationMode="inter_word"/>
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
