--- a/app/src/main/res/layout/activity_upgrade_membership.xml
+++ b/app/src/main/res/layout/activity_upgrade_membership.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/background_gradiant"
     tools:context=".Upgrade_membership">
 
     <RelativeLayout
@@ -14,30 +15,47 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:scaleType="centerCrop"
-            android:src="@drawable/background_gradiant" />
+            android:src="@drawable/pattern" />
 
-        <TextView
-            android:id="@+id/icon1"
-            android:layout_width="wrap_content"
+        <androidx.cardview.widget.CardView
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="80dp"
-            android:scaleType="fitCenter"
-            android:text="DilPay"
-            android:textColor="#fff"
-            android:textSize="30sp"
-            android:textStyle="bold" />
+            android:layout_margin="50dp"
+            app:cardCornerRadius="10dp"
+            android:layout_above="@id/card"
+            app:cardElevation="0dp"
+            app:cardBackgroundColor="#57DFDADC"
+            >
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:padding="2dp"
+                >
+                <ImageView
+                    android:id="@+id/icon1"
+                    android:layout_width="300dp"
+                    android:layout_height="240dp"
+                    android:layout_centerHorizontal="true"
+                    android:src="@drawable/logo"
+                    android:scaleType="centerCrop"
+                    android:text="DilPay"
+                    android:textColor="#000"
+                    android:textSize="30sp"
+                    android:textStyle="bold" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/icon1"
-            android:layout_centerHorizontal="true"
-            android:layout_marginBottom="30dp"
-            android:text="DilPay services Pvt Ltd"
-            android:textColor="#fff"
-            android:textSize="20sp"
-            android:textStyle="bold" />
+                <!--                <TextView-->
+                <!--                    android:layout_width="wrap_content"-->
+                <!--                    android:layout_height="wrap_content"-->
+                <!--                    android:layout_marginTop="130dp"-->
+                <!--                    android:layout_centerHorizontal="true"-->
+                <!--                    android:text="DilPay services Pvt Ltd"-->
+                <!--                    android:textColor="#000"-->
+                <!--                    android:textSize="20sp"-->
+                <!--                    android:textStyle="bold" />-->
+            </RelativeLayout>
+
+
+        </androidx.cardview.widget.CardView>
 
         <com.google.android.material.card.MaterialCardView
             android:id="@+id/card"
