--- a/app/src/main/res/layout/activity_withdraw_amount.xml
+++ b/app/src/main/res/layout/activity_withdraw_amount.xml
@@ -28,6 +28,7 @@
             android:layout_centerVertical="true"
             android:layout_marginTop="25dp"
             android:text="Withdraw amount"
+            android:fontFamily="@font/righteous_regular"
             android:textColor="#fff"
             android:textSize="18sp"
             android:textStyle="bold" />
