--- a/app/src/main/res/layout/for_categories_recyclerview.xml
+++ b/app/src/main/res/layout/for_categories_recyclerview.xml
@@ -35,8 +35,11 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/buton_img"
             android:layout_centerHorizontal="true"
-            android:textColor="@color/textHeading"
-            android:textSize="12sp"
+            android:textColor="@color/textColor"
+            android:textSize="13sp"
+            android:gravity="center"
+            android:layout_marginBottom="3dp"
+            android:fontFamily="@font/domine"
             android:textStyle="bold" />
     </RelativeLayout>
 
