--- a/app/src/main/res/layout/for_notifications_recyclerview.xml
+++ b/app/src/main/res/layout/for_notifications_recyclerview.xml
@@ -33,6 +33,7 @@
             android:layout_alignParentEnd="true"
             android:layout_marginEnd="10dp"
             android:text="date"
+            android:textStyle="bold"
             android:textSize="12sp" />
 
         <TextView
