--- a/app/src/main/res/layout/activity_upgrade_membership.xml
+++ b/app/src/main/res/layout/activity_upgrade_membership.xml
@@ -78,7 +78,7 @@
                     style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="Referral User Number(optional)"
+                    android:hint="Referral User Number( Optional )"
                     app:boxStrokeColor="@color/gradientStart">
 
                     <com.google.android.material.textfield.TextInputEditText
