--- a/app/src/main/res/layout/for_buses_list_recycler.xml
+++ b/app/src/main/res/layout/for_buses_list_recycler.xml
@@ -103,7 +103,7 @@
                 android:layout_height="15dp"
                 android:layout_marginStart="10dp"
                 android:layout_marginTop="3dp"
-                android:src="@drawable/bus_seat" />
+                android:src="@drawable/seat_sitting_economy_class" />
 
             <TextView
                 android:id="@+id/seats"
